# CppUTest
if(${ENABLE_UNIT_TESTS})
  set(CPPUTEST_FILE ${CMAKE_CURRENT_BINARY_DIR}/cpputest/lib/libCppUTest.a)
  add_custom_command(OUTPUT ${CPPUTEST_FILE} COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/cpputest.sh)
  add_custom_target(CPPUTEST_LIBRARY DEPENDS ${CPPUTEST_FILE})
  set(CPPUTEST_LIB ${CPPUTEST_FILE} PARENT_SCOPE)
  set(CPPUTEST_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/cpputest/include PARENT_SCOPE)
endif(${ENABLE_UNIT_TESTS})

# GTest
if(${ENABLE_UNIT_TESTS})
  add_subdirectory(googletest)
endif(${ENABLE_UNIT_TESTS})
