add_subdirectory(aux)

include(add_unit_test)
set(ADDITIONAL_LINK_LIBS "libsarus_testaux")

__gtest_add_unit_test(CLIArguments "${ADDITIONAL_LINK_LIBS}" "User")
add_unit_test(Error test_Error.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test(Flock test_Flock.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test(HookUtility test_HookUtility.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test(Lockfile test_Lockfile.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test(Logger test_Logger.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test(MountParser test_MountParser.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test(PasswdDB test_PasswdDB.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test_as_root(DeviceMount test_DeviceMount.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test_as_root(DeviceParser test_DeviceParser.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test_as_root(MountUtility test_MountUtility.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test_as_root(Mount test_Mount.cpp "${ADDITIONAL_LINK_LIBS}")
add_unit_test_as_root(Utility test_Utility.cpp "${ADDITIONAL_LINK_LIBS}")
