add_subdirectory(aux)

include(add_unit_test)
set(ADDITIONAL_LINK_LIBS "libsarus_testaux")

__gtest_add_unit_test(CLIArguments "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(Error "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(Flock "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(HookUtility "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(Lockfile "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(Logger "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(MountParser "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(PasswdDB "${ADDITIONAL_LINK_LIBS}" "User")
__gtest_add_unit_test(DeviceMount "${ADDITIONAL_LINK_LIBS}" "Root")
__gtest_add_unit_test(DeviceParser "${ADDITIONAL_LINK_LIBS}" "Root")
__gtest_add_unit_test(MountUtility "${ADDITIONAL_LINK_LIBS}" "Root")
__gtest_add_unit_test(Mount "${ADDITIONAL_LINK_LIBS}" "Root")
__gtest_add_unit_test(Utility "${ADDITIONAL_LINK_LIBS}" "Root")
